[package]
name = "route-optimizer-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.29.1"
eframe = "0.29.1"
env_logger = { version = "0.11.5", default-features = false, features = ["auto-color", "humantime"] }
route-optimizer-core = { git = "https://github.com/ParkSnoopy/eve-route-optimizer-core.git", branch = "main" }
