[package]
name = "route-optimizer-gui"
version = "0.2.0"
authors = ["ParkSnoopy <117149837+ParkSnoopy@users.noreply.github.com>"]
edition = "2021"
license = "AGPL-3.0"

[profile.release]
panic = "abort"
strip = true
lto   = true

[dependencies]
eframe              = "0.29"
eyre                = "0.6"
scraper             = "0.21"
factorial           = "0.4"
rayon               = "1.10"
itertools           = "0.13"
futures             = "0.3"
reqwest             = "0.12"
derive_more         = { version = "1.0", features = ["into_iterator"] }
tokio               = { version = "1.41", features = ["rt-multi-thread", "macros"] }

# dev
enable-ansi-support = "0.2.1"
nu-ansi-term        = "0.50.1"
