[package]
name = "route-optimizer-gui"
version = "0.2.1"
authors = ["ParkSnoopy <117149837+ParkSnoopy@users.noreply.github.com>"]
edition = "2021"
license = "AGPL-3.0"

[profile.release]
panic = "abort"
strip = true
lto   = true

[dependencies]
eframe = "0.29"
eyre = "0.6"
tokio = { version = "1.41", features = ["rt"] }
crossbeam = "0.8.4"

route-optimizer-core = { version = "0.5.0", path = "../core" }
